--- a/templates/share_folder.html
+++ b/templates/share_folder.html
@@ -38,7 +38,7 @@
         {% else %}
         <div class="element">
             {% endif %}
-            <div onclick="on_click_file('{{request_folder}}', '{{element}}')"
+            <div onclick="on_click_file('{{request_folder}}', '{{element}}', '{{token}}')"
                  style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; margin-left: 20px; max-width: 80%; width: 80%">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff"
                      class="bi bi-file-earmark-fill folderIconSVG" viewBox="0 0 16 16">
@@ -54,7 +54,7 @@
         </div>
         {% else %}
         <div class="element">
-            <div onclick="on_click_folder('{{request_folder}}', '{{element}}')"
+            <div onclick="on_click_folder('{{request_folder}}', '{{element}}', '{{token}}')"
                  style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; padding: 20px; max-width: 80%; width: 80%">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff" class="bi bi-folder-fill folderIconSVG"
                      viewBox="0 0 16 16">
