--- a/templates/share.html
+++ b/templates/share.html
@@ -39,7 +39,7 @@
             </svg>
             <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        <div onclick="on_click_edit_share('{{element}}')" style="padding-right: 40px;">
+        <div onclick="on_click_edit_share('{{element}}', '{{token}}')" style="padding-right: 40px;">
             <svg id="edit_x"
                  xmlns="http://www.w3.org/2000/svg" fill="white"
                  class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
@@ -56,7 +56,7 @@
             </svg>
             <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        <div onclick="on_click_edit_share('{{element}}')" style="padding-right: 40px;">
+        <div onclick="on_click_edit_share('{{element}}', '{{token}}')" style="padding-right: 40px;">
             <svg id="edit_x"
                  xmlns="http://www.w3.org/2000/svg" fill="white"
                  class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
