--- a/templates/drive.html
+++ b/templates/drive.html
@@ -80,7 +80,7 @@
                 <svg onclick="on_click_edit('{{request_folder}}', '{{element}}')" id="edit_x"
                      xmlns="http://www.w3.org/2000/svg" fill="white"
                      class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
-                    <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+                    <path onclick="on_click_edit('{{request_folder}}', '{{element}}')" d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
                 </svg>
             </div>
         </div>
