--- a/templates/drive.html
+++ b/templates/drive.html
@@ -76,7 +76,7 @@
                 </svg>
                 <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
-            <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px; width: 80px; height: 40px;">
+            <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px; width: 80px; height: 40px; display: flex; justify-content: center; align-items: center; background-color: black;">
                 <svg onclick="on_click_edit('{{request_folder}}', '{{element}}')" id="edit_x"
                      xmlns="http://www.w3.org/2000/svg" fill="white"
                      class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
