--- a/templates/drive.html
+++ b/templates/drive.html
@@ -82,7 +82,7 @@
                      class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
                     <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
                 </svg>
-            </div>
+            </button>
         </div>
         {% endif %}
         {% endfor %}
