--- a/templates/drive.html
+++ b/templates/drive.html
@@ -21,9 +21,9 @@
         <span class="folderPathFont" style="color: white;">{{request_folder}}</span>
         {% endif %}
     </div>
-    <div id="add_button" onclick="on_click_add_button()" style="margin-right: 40px; color: white">
+    <div id="add_button" onclick="on_click_add_button()" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
         <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-plus addButtonSVG"
-             viewBox="0 0 16 16">
+             viewBox="0 0 16 16" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
             <path fill-rule="evenodd"
                   d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
         </svg>
@@ -58,10 +58,10 @@
                 {% endif %}
                 <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
-            <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="padding-right: 40px;">
+            <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
                 <svg onclick="on_click_edit('{{request_folder}}', '{{element}}')" id="edit_x"
                      xmlns="http://www.w3.org/2000/svg" fill="white"
-                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
+                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
                     <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
                 </svg>
             </div>
@@ -79,7 +79,7 @@
             <div onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
                 <svg id="edit_x"
                      xmlns="http://www.w3.org/2000/svg" fill="white"
-                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16" style="width: 100%; height: 100%; display: flex; justify-content: flex-end; align-items: center;">
+                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
                     <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
                 </svg>
             </div>
