--- a/templates/drive.html
+++ b/templates/drive.html
@@ -58,7 +58,7 @@
                 {% endif %}
                 <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
-            <div class="press-hover" onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
+            <div class="press-hover" onclick="on_click_edit(event, '{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
                 <svg
                      xmlns="http://www.w3.org/2000/svg" fill="white"
                      class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
@@ -76,7 +76,7 @@
                 </svg>
                 <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
-            <div class="press-hover" onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
+            <div class="press-hover" onclick="on_click_edit(event, '{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
                 <svg
                      xmlns="http://www.w3.org/2000/svg" fill="white"
                      class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
