--- a/templates/share.html
+++ b/templates/share.html
@@ -39,9 +39,9 @@
             </svg>
             <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        <div onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index - 1]}}')" style="padding-right: 40px;">
+        <div class="press-hover" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index - 1]}}')"  style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
             <svg id="edit_x"
-                 xmlns="http://www.w3.org/2000/svg" fill="white"
+                 xmlns="http://www.w3.org/2000/svg" fill="white"  style="width: 100%; display: flex; justify-content: flex-end; align-items: center;"
                  class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
                 <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
             </svg>
@@ -56,10 +56,10 @@
             </svg>
             <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
-        <div onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index-1]}}')" style="padding-right: 40px;">
+        <div class="press-hover" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index-1]}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
             <svg id="edit_x"
                  xmlns="http://www.w3.org/2000/svg" fill="white"
-                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
+                 class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16"  style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
                 <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
             </svg>
         </div>
@@ -71,14 +71,14 @@
 </body>
 
 <div class="bottomNav">
-    <button onclick="on_click_drive_in_bottom_nav()" class="bottomNavButton">
+    <button onclick="on_click_drive_in_bottom_nav()" class="bottomNavButton press-hover">
         <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-folder" fill="white"
              viewBox="0 0 16 16">
             <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
         </svg>
         <span style="color: white">Files</span>
     </button>
-    <button class="bottomNavButton">
+    <button class="bottomNavButton press-hover">
         <svg xmlns="http://www.w3.org/2000/svg" class="bi bi-link-45deg" viewBox="0 0 16 16"
              fill="#6752d1">
             <path d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1 1 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4 4 0 0 1-.128-1.287z"/>
