--- a/templates/drive.html
+++ b/templates/drive.html
@@ -58,10 +58,10 @@
                 {% endif %}
                 <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
-            <div class="press-hover" onclick="on_click_edit(event, '{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; height: 100%; display: flex; justify-content: flex-end; align-items: center;">
+            <div class="press-hover" onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
                 <svg id="edit_x"
                      xmlns="http://www.w3.org/2000/svg" fill="white"
-                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16" style="height: 100%; width: 100%; display: flex; justify-content: flex-end; align-items: center;">
+                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
                     <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
                 </svg>
             </div>
@@ -76,10 +76,10 @@
                 </svg>
                 <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
-            <div class="press-hover" onclick="on_click_edit(event, '{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; height: 100%; display: flex; justify-content: flex-end; align-items: center;">
+            <div class="press-hover" onclick="on_click_edit('{{request_folder}}', '{{element}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
                 <svg id="edit_x"
                      xmlns="http://www.w3.org/2000/svg" fill="white"
-                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16" style="user-select: none; width: 100%; display: flex; justify-content: flex-end; align-items: center;">
+                     class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
                     <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
                 </svg>
             </div>
