--- a/templates/share.html
+++ b/templates/share.html
@@ -40,11 +40,13 @@
             <span style="max-width: 60%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
         <div class="press-hover" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index - 1]}}')"  style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
+            <button id="edit_x" style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
             <svg id="edit_x"
                  xmlns="http://www.w3.org/2000/svg" fill="white"  style="width: 100%; display: flex; justify-content: flex-end; align-items: center;"
                  class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16">
                 <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
             </svg>
+            </button>
         </div>
     </div>
     {% else %}
@@ -57,11 +59,13 @@
             <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
         </div>
         <div class="press-hover" onclick="on_click_edit_share('{{element}}', '{{tokens[loop.index-1]}}')" style="margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
+            <button id="edit_x" style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: transparent; border: 0;">
             <svg id="edit_x"
                  xmlns="http://www.w3.org/2000/svg" fill="white"
                  class="bi bi-three-dots-vertical editButtonSVG" viewBox="0 0 16 16"  style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
                 <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
             </svg>
+            </button>
         </div>
     </div>
     {% endif %}
