--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -110,7 +110,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 0;
-    height: 40%;
+    height: 0;
     max-width: 100vw;
     width: 100vw;
     background-color: #26242f;
@@ -119,9 +119,10 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    transition: all .5s ease;
+    -webkit-transition: all 3s ease;
+    -moz-transition: all 3s ease;
+    transition: all 3s ease;
+    overflow: hidden;
 }
 
 .bottomNavButton span {
@@ -292,7 +293,7 @@ body {
     }
 
     .editMenu {
-        height: 30%;
+        height: 0;
         width: 50%;
         left: auto;
     }
