--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -83,6 +83,7 @@ body {
     padding: 20px 80px;
     background-color: transparent;
     border: 0;
+    max-height: 90%;
 }
 
 .bottomNavButton svg {
