--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -80,15 +80,15 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-height: 90%;
     padding: 20px 80px;
     background-color: transparent;
     border: 0;
-    max-height: 90%;
 }
 
 .bottomNavButton svg {
-    width: 60px;
-    height: 60px;
+    min-width: 60px;
+    min-height: 60px;
 }
 
 
