--- a/static/styles/drive.css
+++ b/static/styles/drive.css
@@ -89,6 +89,8 @@ body {
 .bottomNavButton svg {
     min-width: 25px;
     min-height: 25px;
+    max-width: 25px;
+    max-height: 25px;
 }
 
 
@@ -245,8 +247,10 @@ body {
     }
 
     .bottomNavButton svg {
-        width: 20px;
-        height: 20px;
+        min-width: 20px;
+        min-height: 20px;
+        max-width: 20px;
+        max-height: 20px;
     }
 
     .bottomNavButton span {
